fixed alignment issues in tool

--- a/style.css
+++ b/style.css
@@ -312,6 +312,20 @@ input[type=number] {
     background: #d8ecfc;
     font: 20px/1.6 "Baskerville", "Times";
     width: 10%;
+    text-align: right;
+}
+
+select {
+    border: 0;
+    width: 20%;
+    color: inherit;
+    font: inherit;
+    background: #d8ecfc;
+    border-bottom: 2px solid #0082fc;
+}
+
+.tool-input {
+    text-align: right;
 }
 
 /*********************/
@@ -341,9 +355,9 @@ input[type=number] {
   color: #00215E;
   cursor: pointer;
   background-color: #ebf6ff;
-  border-bottom: 0px solid #0082fc;
-  border-top: 0px solid #0082fc;
-  letter-spacing: 0px;
+  border-bottom: 0 solid #0082fc;
+  border-top: 0 solid #0082fc;
+  letter-spacing: 0;
 }
 @media screen and (max-width: 640px) {
   .masthead .site-name {
